# WolfPack

./: .claude-crash-transcript.md  .gitignore  AGENTS.md  CLAUDE.md  CURRENT_WORK.md  INBOX.md  README.md  overnight-20260324.md  package-lock.json
intel/: .env.example  pyproject.toml  setup-vps.sh
intel/tests/: test_heuristics.py
intel/wolfpack/: __init__.py  api.py  auto_trader.py  backtest_engine.py  bot_memory.py  bot_permissions.py  bot_prompt.py  bot_tools.py  candle_cache.py  config.py  cycle_metrics.py  daily_report.py  data_freshness.py  db.py  drawdown_monitor.py  export_training_data.py  failure_tracker.py  heuristics.py  live_trading.py  llm_client.py  lp_auto_trader.py  lp_live_engine.py  lp_paper_engine.py  notification_digest.py  notifications.py  paper_trading.py  performance_tracker.py  price_utils.py  prompt_builder.py  response_parser.py  risk_controls.py  telegram_bot.py  tick_loop.py  token_tracker.py  veto.py  wallet_registry.py
intel/wolfpack/agents/: __init__.py  base.py  brief.py  quant.py  sage.py  snoop.py
intel/wolfpack/exchanges/: __init__.py  base.py  dydx.py  hyperliquid.py  hyperliquid_trading.py  kraken.py
intel/wolfpack/models/: backtest_models.py
intel/wolfpack/modules/: __init__.py  backtest.py  change_point.py  circuit_breaker.py  correlation.py  execution.py  funding.py  liquidity.py  lp_fee_manager.py  lp_monitor.py  lp_pool_scanner.py  lp_range_calculator.py  lp_rebalance.py  momentum_buckets.py  monte_carlo.py  pool_screening.py  prediction_scorer.py  regime.py  regime_transition.py  regime_v2.py  sizing.py  (+5 more)
(+371 files in other folders)
