[project]
name = "wolfpack-intel"
version = "0.1.0"
description = "WolfPack multi-agent crypto intelligence service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "supabase>=2.10.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "websockets>=13.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=21.0",
    "web3>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
